Completed HTML and CSS Questions

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,11 @@
 <body>
 
     <div id="main-content">
-        
+        <form>
+            <label>Full Name:</label>
+            <input type="text" id="full-name" name="full-name" placeholder="John Smith">
+            <input type="submit" value:"Submit">
+        </form>
     </div>
     
     <script src="js/interview.js"></script>
